# soloist

./: .gitignore  .prettierignore  README.md  SPEC.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-portable.yml  test.yml
docs/architecture/: README.md  engineering-practices.md  refactor-plan.md
plugins-example/: PLUGIN_FORMAT.md  README.md  SCRIPT_PLUGIN_SECURITY.md
plugins-example/omen/: manifest.json
plugins-example/omen-table/: plugin.json
plugins-example/script-plugin/: README.md  package-lock.json  package.json  plugin.json  tsconfig.json
plugins-example/simple-char/: plugin.json
scripts/: architecture-baseline.json  build-plugin-fixtures.mjs  check-architecture.mjs  check-file-size.mjs
src/: base.css  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs  sqlite.rs
src/app/: App.tsx  PluginFeedback.tsx  SettingsModal.tsx
src/characterSheets/: CharacterSheetBuilder.tsx  CharacterSheetPanel.tsx  CharacterSheetTemplatePanel.tsx  characterSheetLogic.ts  characterSheetTemplateLogic.ts  characterSheetTemplateRegistry.ts  characterSheetTypes.ts
src/combat/: CombatPanel.tsx  combatLogic.ts  combatTypes.ts
src/commands/: commandTypes.ts  createCommandResultBlock.ts  executeCommand.ts  parseCommand.ts  slashCommandRegistry.ts
src/dice/: diceParser.ts  diceTypes.ts  rollDice.ts
src/docs/: oracle-providers.md
src/domain/: domainTypes.ts
src/editor/: Editor.tsx  applyCommandResult.ts  markdown.ts
(+217 files in other folders)
