[package]
name = "soloist"
version = "0.1.0"
description = "A portable solo TRPG markdown writing app"
authors = ["Soloist"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-dialog = "2.4.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
